--- a/zuvio.html
+++ b/zuvio.html
@@ -9,14 +9,12 @@
     </head>
     <body>
         <div id="content">
-            <div class="header">
-                <div class="grid-container">
-                    <div>中文</div>
-                    <div>English</div>
-                    <div class="register">註冊新帳號</div>
-                </div>
-                
+            <div class="grid-container">
+                <div>中文</div>
+                <div>English</div>
+                <div class="register">註冊新帳號</div>
             </div>
+                
             <div class='logo'>
                 <img src="new-logo@2x.png"/>
             </div>
@@ -28,10 +26,10 @@
                         <div id="forget-password">合作學校帳密查詢</div>
                         <div id="regist-account">忘記密碼</div>
                     </div>
-                    <button type="submit"class="submit-button" onclick="Kirby()">登入</button>
+                    <button type="submit"class="submit" onclick="Kirby()">登入</button>
                 </form>
             </div>
-            <div class="irs-corp-link">
+            <div class="link">
                 不是校園版使用者嗎？<a target='blank' href="">前往企業版</a>
             </div>
             </div>
