--- a/zuvio.html
+++ b/zuvio.html
@@ -30,11 +30,9 @@
                 </form>
             </div>
             <div class="link">
-                不是校園版使用者嗎？<a target='blank' href="">前往企業版</a>
+                不是校園版使用者嗎？<a target='blank'>前往企業版</a>
             </div>
             </div>
         </div>
-
-        
     </body>
 </html>
